# trammel-pe

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  CONTRIBUYENDO.md  LICENSE  README.md  index.html
.forgejo/workflows/: sync-to-github.yml
.gitea/: PULL_REQUEST_TEMPLATE.md
.gitea/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  introduction.md  translation.md
.github/workflows/: sync-to-codeberg.yml
prompts/: buildera-dap-generated-example.md.bak  buildera-dap-v1.md  buildera-dap-v2.md
scripts/: parity-chain.py  parity-quality.py  verify.sh
trammel-py/: .gitignore  README.md  openclaw.plugin.json  pyproject.toml
trammel-py/trammel_pe/: __init__.py  cli.py  core.py  mcp_server.py
